# adventofcode2025

./: CMakeLists.txt
advent/: CMakeLists.txt  Day1.cpp  Day1.hpp  Day10.cpp  Day11.cpp  Day12.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp  advent.cpp
common/: AutoRegister.hpp  BaseDay.hpp  CMakeLists.txt  DataFetcher.cpp  DataFetcher.hpp  DataFetcherExample.cpp  DefaultDay.cpp  DefaultDay.hpp  Register.cpp  Register.hpp
day1/: CMakeLists.txt  Day1.cpp
tests/: CMakeLists.txt  DayTests.cpp
utils/: CMakeLists.txt  DataFetcher.cpp
